I like it better like this

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(yolov7_ros)
+project(yolov7-ros)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -53,8 +53,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
-  ObjectTracking2D.msg
-  ObjectTracking2DArray.msg
+ # ObjectTracking2D.msg
+  #ObjectTracking2DArray.msg
 )
 
 ## Generate services in the 'srv' folder
