--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>yolov7_ros</name>
+  <name>yolov7-ros</name>
   <version>0.0.0</version>
-  <description>The yolov7_ros package</description>
+  <description>The yolov7-ros package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
